if-else/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> if_else
Rule 1     if_else -> IF LPAREN expressions RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
Rule 2     if_else -> IF LPAREN expressions RPAREN LBRACKET statements RBRACKET
Rule 3     expressions -> expression LOGICAL expression
Rule 4     expressions -> expression
Rule 5     expression -> expression COMPARISON expression
Rule 6     expression -> expression BITWISE expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> ULOGICAL expression
Rule 12    expression -> UBITWISE expression
Rule 13    expression -> LPAREN expression RPAREN
Rule 14    expression -> IDENTIFIER
Rule 15    expression -> NUMBER
Rule 16    expression -> BOOLEAN
Rule 17    expression -> NULL
Rule 18    expression -> STRING
Rule 19    statements -> statement statements
Rule 20    statements -> statement
Rule 21    statements -> <empty>
Rule 22    statement -> assign_stmt
Rule 23    statement -> c_log_stmt
Rule 24    statement -> IDENTIFIER
Rule 25    c_log_stmt -> C_LOG LPAREN args RPAREN
Rule 26    args -> expression
Rule 27    args -> expression COMMA args
Rule 28    assign_stmt -> TYPE IDENTIFIER ASSIGN expressions
Rule 29    assign_stmt -> TYPE IDENTIFIER ASSIGN expression COMMA multiple_assign
Rule 30    assign_stmt -> IDENTIFIER ASSIGN expressions
Rule 31    assign_stmt -> IDENTIFIER SHORTHAND expressions
Rule 32    multiple_assign -> IDENTIFIER ASSIGN expressions
Rule 33    multiple_assign -> IDENTIFIER ASSIGN expressions COMMA multiple_assign

Terminals, with rules where they appear

ASSIGN               : 28 29 30 32 33
BITWISE              : 6
BOOLEAN              : 16
COMMA                : 27 29 33
COMPARISON           : 5
C_LOG                : 25
DIVIDE               : 9
ELSE                 : 1
IDENTIFIER           : 14 24 28 29 30 31 32 33
IF                   : 1 2
LBRACKET             : 1 1 2
LOGICAL              : 3
LPAREN               : 1 2 13 25
MINUS                : 8
NULL                 : 17
NUMBER               : 15
PLUS                 : 7
RBRACKET             : 1 1 2
RPAREN               : 1 2 13 25
SHORTHAND            : 31
STRING               : 18
TIMES                : 10
TYPE                 : 28 29
UBITWISE             : 12
ULOGICAL             : 11
error                : 

Nonterminals, with rules where they appear

args                 : 25 27
assign_stmt          : 22
c_log_stmt           : 23
expression           : 3 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 13 26 27 29
expressions          : 1 2 28 30 31 32 33
if_else              : 0
multiple_assign      : 29 33
statement            : 19 20
statements           : 1 1 2 19

Parsing method: LALR

state 0

    (0) S' -> . if_else
    (1) if_else -> . IF LPAREN expressions RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> . IF LPAREN expressions RPAREN LBRACKET statements RBRACKET

    IF              shift and go to state 2

    if_else                        shift and go to state 1

state 1

    (0) S' -> if_else .



state 2

    (1) if_else -> IF . LPAREN expressions RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> IF . LPAREN expressions RPAREN LBRACKET statements RBRACKET

    LPAREN          shift and go to state 3


state 3

    (1) if_else -> IF LPAREN . expressions RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> IF LPAREN . expressions RPAREN LBRACKET statements RBRACKET
    (3) expressions -> . expression LOGICAL expression
    (4) expressions -> . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expressions                    shift and go to state 5
    expression                     shift and go to state 6

state 4

    (13) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 14

state 5

    (1) if_else -> IF LPAREN expressions . RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> IF LPAREN expressions . RPAREN LBRACKET statements RBRACKET

    RPAREN          shift and go to state 15


state 6

    (3) expressions -> expression . LOGICAL expression
    (4) expressions -> expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

    LOGICAL         shift and go to state 16
    RPAREN          reduce using rule 4 (expressions -> expression .)
    IDENTIFIER      reduce using rule 4 (expressions -> expression .)
    TYPE            reduce using rule 4 (expressions -> expression .)
    C_LOG           reduce using rule 4 (expressions -> expression .)
    RBRACKET        reduce using rule 4 (expressions -> expression .)
    COMMA           reduce using rule 4 (expressions -> expression .)
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22


state 7

    (11) expression -> ULOGICAL . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 23

state 8

    (12) expression -> UBITWISE . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 24

state 9

    (14) expression -> IDENTIFIER .

    LOGICAL         reduce using rule 14 (expression -> IDENTIFIER .)
    COMPARISON      reduce using rule 14 (expression -> IDENTIFIER .)
    BITWISE         reduce using rule 14 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 14 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 14 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 14 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 14 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 14 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 14 (expression -> IDENTIFIER .)
    TYPE            reduce using rule 14 (expression -> IDENTIFIER .)
    C_LOG           reduce using rule 14 (expression -> IDENTIFIER .)
    RBRACKET        reduce using rule 14 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 14 (expression -> IDENTIFIER .)


state 10

    (15) expression -> NUMBER .

    LOGICAL         reduce using rule 15 (expression -> NUMBER .)
    COMPARISON      reduce using rule 15 (expression -> NUMBER .)
    BITWISE         reduce using rule 15 (expression -> NUMBER .)
    PLUS            reduce using rule 15 (expression -> NUMBER .)
    MINUS           reduce using rule 15 (expression -> NUMBER .)
    DIVIDE          reduce using rule 15 (expression -> NUMBER .)
    TIMES           reduce using rule 15 (expression -> NUMBER .)
    RPAREN          reduce using rule 15 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 15 (expression -> NUMBER .)
    TYPE            reduce using rule 15 (expression -> NUMBER .)
    C_LOG           reduce using rule 15 (expression -> NUMBER .)
    RBRACKET        reduce using rule 15 (expression -> NUMBER .)
    COMMA           reduce using rule 15 (expression -> NUMBER .)


state 11

    (16) expression -> BOOLEAN .

    LOGICAL         reduce using rule 16 (expression -> BOOLEAN .)
    COMPARISON      reduce using rule 16 (expression -> BOOLEAN .)
    BITWISE         reduce using rule 16 (expression -> BOOLEAN .)
    PLUS            reduce using rule 16 (expression -> BOOLEAN .)
    MINUS           reduce using rule 16 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 16 (expression -> BOOLEAN .)
    TIMES           reduce using rule 16 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 16 (expression -> BOOLEAN .)
    IDENTIFIER      reduce using rule 16 (expression -> BOOLEAN .)
    TYPE            reduce using rule 16 (expression -> BOOLEAN .)
    C_LOG           reduce using rule 16 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 16 (expression -> BOOLEAN .)
    COMMA           reduce using rule 16 (expression -> BOOLEAN .)


state 12

    (17) expression -> NULL .

    LOGICAL         reduce using rule 17 (expression -> NULL .)
    COMPARISON      reduce using rule 17 (expression -> NULL .)
    BITWISE         reduce using rule 17 (expression -> NULL .)
    PLUS            reduce using rule 17 (expression -> NULL .)
    MINUS           reduce using rule 17 (expression -> NULL .)
    DIVIDE          reduce using rule 17 (expression -> NULL .)
    TIMES           reduce using rule 17 (expression -> NULL .)
    RPAREN          reduce using rule 17 (expression -> NULL .)
    IDENTIFIER      reduce using rule 17 (expression -> NULL .)
    TYPE            reduce using rule 17 (expression -> NULL .)
    C_LOG           reduce using rule 17 (expression -> NULL .)
    RBRACKET        reduce using rule 17 (expression -> NULL .)
    COMMA           reduce using rule 17 (expression -> NULL .)


state 13

    (18) expression -> STRING .

    LOGICAL         reduce using rule 18 (expression -> STRING .)
    COMPARISON      reduce using rule 18 (expression -> STRING .)
    BITWISE         reduce using rule 18 (expression -> STRING .)
    PLUS            reduce using rule 18 (expression -> STRING .)
    MINUS           reduce using rule 18 (expression -> STRING .)
    DIVIDE          reduce using rule 18 (expression -> STRING .)
    TIMES           reduce using rule 18 (expression -> STRING .)
    RPAREN          reduce using rule 18 (expression -> STRING .)
    IDENTIFIER      reduce using rule 18 (expression -> STRING .)
    TYPE            reduce using rule 18 (expression -> STRING .)
    C_LOG           reduce using rule 18 (expression -> STRING .)
    RBRACKET        reduce using rule 18 (expression -> STRING .)
    COMMA           reduce using rule 18 (expression -> STRING .)


state 14

    (13) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

    RPAREN          shift and go to state 25
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22


state 15

    (1) if_else -> IF LPAREN expressions RPAREN . LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> IF LPAREN expressions RPAREN . LBRACKET statements RBRACKET

    LBRACKET        shift and go to state 26


state 16

    (3) expressions -> expression LOGICAL . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 27

state 17

    (5) expression -> expression COMPARISON . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 28

state 18

    (6) expression -> expression BITWISE . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 29

state 19

    (7) expression -> expression PLUS . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 30

state 20

    (8) expression -> expression MINUS . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 31

state 21

    (9) expression -> expression DIVIDE . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 32

state 22

    (10) expression -> expression TIMES . expression
    (5) expression -> . expression COMPARISON expression
    (6) expression -> . expression BITWISE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . ULOGICAL expression
    (12) expression -> . UBITWISE expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . IDENTIFIER
    (15) expression -> . NUMBER
    (16) expression -> . BOOLEAN
    (17) expression -> . NULL
    (18) expression -> . STRING

    ULOGICAL        shift and go to state 7
    UBITWISE        shift and go to state 8
    LPAREN          shift and go to state 4
    IDENTIFIER      shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11
    NULL            shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 33

state 23

    (11) expression -> ULOGICAL expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

  ! shift/reduce conflict for COMPARISON resolved as shift
  ! shift/reduce conflict for BITWISE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
    LOGICAL         reduce using rule 11 (expression -> ULOGICAL expression .)
    RPAREN          reduce using rule 11 (expression -> ULOGICAL expression .)
    IDENTIFIER      reduce using rule 11 (expression -> ULOGICAL expression .)
    TYPE            reduce using rule 11 (expression -> ULOGICAL expression .)
    C_LOG           reduce using rule 11 (expression -> ULOGICAL expression .)
    RBRACKET        reduce using rule 11 (expression -> ULOGICAL expression .)
    COMMA           reduce using rule 11 (expression -> ULOGICAL expression .)
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22

  ! COMPARISON      [ reduce using rule 11 (expression -> ULOGICAL expression .) ]
  ! BITWISE         [ reduce using rule 11 (expression -> ULOGICAL expression .) ]
  ! PLUS            [ reduce using rule 11 (expression -> ULOGICAL expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> ULOGICAL expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> ULOGICAL expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> ULOGICAL expression .) ]


state 24

    (12) expression -> UBITWISE expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

  ! shift/reduce conflict for COMPARISON resolved as shift
  ! shift/reduce conflict for BITWISE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
    LOGICAL         reduce using rule 12 (expression -> UBITWISE expression .)
    RPAREN          reduce using rule 12 (expression -> UBITWISE expression .)
    IDENTIFIER      reduce using rule 12 (expression -> UBITWISE expression .)
    TYPE            reduce using rule 12 (expression -> UBITWISE expression .)
    C_LOG           reduce using rule 12 (expression -> UBITWISE expression .)
    RBRACKET        reduce using rule 12 (expression -> UBITWISE expression .)
    COMMA           reduce using rule 12 (expression -> UBITWISE expression .)
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22

  ! COMPARISON      [ reduce using rule 12 (expression -> UBITWISE expression .) ]
  ! BITWISE         [ reduce using rule 12 (expression -> UBITWISE expression .) ]
  ! PLUS            [ reduce using rule 12 (expression -> UBITWISE expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> UBITWISE expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> UBITWISE expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> UBITWISE expression .) ]


state 25

    (13) expression -> LPAREN expression RPAREN .

    LOGICAL         reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    COMPARISON      reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    BITWISE         reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    IDENTIFIER      reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    TYPE            reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    C_LOG           reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    RBRACKET        reduce using rule 13 (expression -> LPAREN expression RPAREN .)
    COMMA           reduce using rule 13 (expression -> LPAREN expression RPAREN .)


state 26

    (1) if_else -> IF LPAREN expressions RPAREN LBRACKET . statements RBRACKET ELSE LBRACKET statements RBRACKET
    (2) if_else -> IF LPAREN expressions RPAREN LBRACKET . statements RBRACKET
    (19) statements -> . statement statements
    (20) statements -> . statement
    (21) statements -> .
    (22) statement -> . assign_stmt
    (23) statement -> . c_log_stmt
    (24) statement -> . IDENTIFIER
    (28) assign_stmt -> . TYPE IDENTIFIER ASSIGN expressions
    (29) assign_stmt -> . TYPE IDENTIFIER ASSIGN expression COMMA multiple_assign
    (30) assign_stmt -> . IDENTIFIER ASSIGN expressions
    (31) assign_stmt -> . IDENTIFIER SHORTHAND expressions
    (25) c_log_stmt -> . C_LOG LPAREN args RPAREN

    RBRACKET        reduce using rule 21 (statements -> .)
    IDENTIFIER      shift and go to state 38
    TYPE            shift and go to state 39
    C_LOG           shift and go to state 40

    statements                     shift and go to state 34
    statement                      shift and go to state 35
    assign_stmt                    shift and go to state 36
    c_log_stmt                     shift and go to state 37

state 27

    (3) expressions -> expression LOGICAL expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

    RPAREN          reduce using rule 3 (expressions -> expression LOGICAL expression .)
    IDENTIFIER      reduce using rule 3 (expressions -> expression LOGICAL expression .)
    TYPE            reduce using rule 3 (expressions -> expression LOGICAL expression .)
    C_LOG           reduce using rule 3 (expressions -> expression LOGICAL expression .)
    RBRACKET        reduce using rule 3 (expressions -> expression LOGICAL expression .)
    COMMA           reduce using rule 3 (expressions -> expression LOGICAL expression .)
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22


state 28

    (5) expression -> expression COMPARISON expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression

  ! shift/reduce conflict for COMPARISON resolved as shift
  ! shift/reduce conflict for BITWISE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
    LOGICAL         reduce using rule 5 (expression -> expression COMPARISON expression .)
    RPAREN          reduce using rule 5 (expression -> expression COMPARISON expression .)
    IDENTIFIER      reduce using rule 5 (expression -> expression COMPARISON expression .)
    TYPE            reduce using rule 5 (expression -> expression COMPARISON expression .)
    C_LOG           reduce using rule 5 (expression -> expression COMPARISON expression .)
    RBRACKET        reduce using rule 5 (expression -> expression COMPARISON expression .)
    COMMA           reduce using rule 5 (expression -> expression COMPARISON expression .)
    COMPARISON      shift and go to state 17
    BITWISE         shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    DIVIDE          shift and go to state 21
    TIMES           shift and go to state 22

  ! COMPARISON      [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]
  ! BITWISE         [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]
  ! PLUS            [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]
  ! MINUS           [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]
  ! TIMES           [ reduce using rule 5 (expression -> expression COMPARISON expression .) ]


state 29

    (6) expression -> expression BITWISE expression .
    (5) expression -> expression . COMPARISON expression
    (6) expression -> expression . BITWISE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . TIMES expression
